# os

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
arrayvec/: Cargo.toml
arrayvec/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: clock.rs  flappy.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  panic.rs  qemu.rs  serial.rs  snek.rs  task.rs  test.rs  vga.rs
kernel/src/interrupts/: handlers.rs
kernel/src/memory/: bump_alloc.rs  frame_alloc.rs  freelist_alloc.rs  global_alloc.rs
kernel/src/task/: executor.rs  keyboard.rs  timer.rs
kernel/src/vga/: buffer.rs  color.rs  macros.rs  repr.rs
kernel/tests/: basic_boot.rs  heap_alloc.rs  stack_overflow.rs
spinlock/: Cargo.toml
spinlock/src/: lazylock.rs  lazystatic.rs  lib.rs
writeup/: ISE_Submission.typ
writeup/templates/: common.typ  theme.typ
writeup/templates/themes/: catpuccin-latte.typ  light.typ  rose-pine-dawn.typ  rose-pine-moon.typ  rose-pine.typ  tokyonight.typ
