[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc", "nightly"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spinlock = { version = "0.1.0", path = "../spinlock", features = [
  "x86_64_disable_interrupts",
] }
uart_16550 = { version = "0.3.2", features = ["nightly"] }
volatile = "0.6.1"
x86_64 = "0.15.2"

[package.metadata.bootimage]
run-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-timeout = 120 # (in seconds)
test-success-exit-code = 33 # (0x10 << 1) | 1
